<resources>
    <string name="app_name">Los Amigos De Viky</string>
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_contrasena">Contraseña</string>
    <string name="switchSaveCredentials">Guardar las credenciales</string>
    <string name="btnAcceder">ACCEDER</string>

    <string name="borrarCredenciales">Borrar las credenciales</string>
    <string name="credencialesBorradas">Credenciales borradas</string>

    <string name="ayuntamientos">Ayuntamientos</string>
    <string name="protectoras">Protectoras</string>
    <string name="colonias">Colonias</string>
    <string name="gatos">Gatos</string>
    <string name="veterinarios">Veterinarios</string>
    <string name="cuidados">Cuidados</string>
    <string name="ayuda">Selecciona la sección que quieres gestionar.</string>

    <string name="ayuntamiento">Nombre:</string>
    <string name="telefono">Teléfono:</string>
    <string name="responsable">Responsable:</string>
    <string name="direccion">Dirección:</string>
    <string name="correo">Correo electrónico:</string>
    <string name="ordenar">Ordenar por:</string>
    <string name="nuevo">Nuevo</string>
    <string name="nueva">Nueva</string>
    <string name="ayuntamientoPlaceholder">Ayuntamiento de...</string>
    <string name="telefonoPlaceholder">606505404</string>
    <string name="responsablePlaceholder">Antonio Gómez Sánchez</string>
    <string name="direccionPlaceholder">av. de Andalucía, Sevilla</string>
    <string name="cp">Código postal:</string>
    <string name="cpPlaceholder">41007</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <string name="eliminar">Eliminar</string>
    <string name="mensajeConfirmacion">"¿Estás seguro/a de que quieres eliminar: \n\n"</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="protectora">Nombre:</string>
    <string name="protectoraPlaceholder">Nombre de protectora...</string>
    <string name="localidad">Localidad:</string>
    <string name="localidadPlaceholder">Sevilla, 41003</string>
    <string name="correoPlaceholder">correo@gmail.com</string>

    <string name="colonia">Nombre:</string>
    <string name="coordinadas">Coordinadas geográficas:</string>
    <string name="ayuntamientoFK">Ayuntamiento:</string>
    <string name="protectoraFK">Protectora:</string>
    <string name="coloniaPlaceholder">Colonia...</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="latitudPlaceholder">37.401893</string>
    <string name="longitudPlaceholder">-5.950948</string>

    <string name="veterinario">Nombre:</string>
    <string name="especialidad">Especialidad:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="nombrePlaceholder">José Antonio</string>
    <string name="apellidosPlaceholder">Muñoz Rodríguez</string>
    <string name="especialidadPlaceholder">Traumatología</string>
    <string name="gato">Nombre:</string>
    <string name="fecha_nacimiento">Fecha nacimiento:</string>
    <string name="fecha_nacimiento2">Fecha \n \t nacimiento:</string>
    <string name="chip">Chip:</string>
    <string name="sexo">Sexo:</string>
    <string name="esterilizado">Esterilizado:</string>
    <string name="descripcion">Descripción:</string>
    <string name="veterinarioFK">Veterinario:</string>
    <string name="coloniaFK">Colonia:</string>
    <string name="nombreGatoPlaceholder">Garfield</string>
    <string name="sexoGatoPlaceholder">Masculino</string>
    <string name="descripcionGatoPlaceholder">Descripción del gato...</string>
    <string name="fechaPlaceholder">2020-03-20</string>
    <string name="chipPlaceholder">865345675354325</string>
    <string name="cuidado">Cuidado: </string>
    <string name="gatoFK">Gato: </string>
    <string name="fechaInicio">Fecha de inicio: </string>
    <string name="fechaFin">Fecha de fin: </string>
    <string name="posologia">Posología: </string>
    <string name="fechaInicioPlaceholder">2020-03-20</string>
    <string name="fechaFinPlaceholder">2020-05-15</string>
    <string name="descripcionPlaceholder">Descripción del cuidado...</string>
    <string name="posologiaPlaceholder">Posología del cuidado...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>