<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/item_content"
    android:orientation="vertical"
    app:layout_anchorGravity="top">

    <TextView
        android:id="@+id/textViewNombreColonia"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@color/item_title"
        android:gravity="center"
        android:text="@string/colonia"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDireccionColonia"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/direccion" />

    <TextView
        android:id="@+id/textViewCoordinadasGeograficasColonia"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/coordinadas" />

    <TextView
        android:id="@+id/textViewAyuntamientoFKColonia"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/ayuntamientoFK" />

    <TextView
        android:id="@+id/textViewProtectoraFKColonia"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/protectoraFK" />

</LinearLayout>