<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@color/item_content"
    android:orientation="vertical"
    app:layout_anchorGravity="top">

    <TextView
        android:id="@+id/textViewNombreGato"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/item_title"
        android:gravity="center"
        android:text="@string/gato"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewImagenGato"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/baseline_pets_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFechaNacimientoGato"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/fecha_nacimiento" />

            <TextView
                android:id="@+id/textViewChipGato"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/chip" />

            <TextView
                android:id="@+id/textViewSexoGato"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/sexo" />

            <TextView
                android:id="@+id/textViewEsterilizadoGato"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/esterilizado" />

            <TextView
                android:id="@+id/textViewColoniaFKGato"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/coloniaFK" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDescripcionGato"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:gravity="left"
        android:justificationMode="inter_word"
        android:singleLine="false"
        android:text="@string/descripcion"
        android:textAlignment="inherit" />
</LinearLayout>
