<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    tools:context=".protectoras.AltaProtectora">

    <TextView
        android:id="@+id/textViewAltaNombreProtectora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protectora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/textViewAltaDireccionProtectora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/direccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewAltaNombreProtectora"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/textViewAltaNombreProtectora"
        app:layout_constraintTop_toBottomOf="@+id/textViewAltaNombreProtectora"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewAltaLocalidadProtectora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/localidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewAltaDireccionProtectora"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewAltaDireccionProtectora"
        app:layout_constraintTop_toBottomOf="@+id/textViewAltaDireccionProtectora"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewAltaTelefonoProtectora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/telefono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewAltaLocalidadProtectora"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewAltaLocalidadProtectora"
        app:layout_constraintTop_toBottomOf="@+id/textViewAltaLocalidadProtectora"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/textViewAltaCorreoProtectora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewAltaTelefonoProtectora"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewAltaTelefonoProtectora"
        app:layout_constraintTop_toBottomOf="@+id/textViewAltaTelefonoProtectora"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextAltaDireccionProtectora"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/direccionPlaceholder"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaDireccionProtectora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAltaDireccionProtectora"
        app:layout_constraintVertical_bias="0.653" />

    <EditText
        android:id="@+id/editTextAltaNombreProtectora"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/protectoraPlaceholder"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaNombreProtectora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAltaNombreProtectora"
        app:layout_constraintVertical_bias="0.576" />

    <EditText
        android:id="@+id/editTextAltaLocalidadProtectora"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/localidadPlaceholder"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaLocalidadProtectora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAltaLocalidadProtectora"
        app:layout_constraintVertical_bias="0.73" />

    <EditText
        android:id="@+id/editTextAltaTelefonoProtectora"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefonoPlaceholder"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaTelefonoProtectora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAltaTelefonoProtectora"
        app:layout_constraintVertical_bias="0.615" />

    <EditText
        android:id="@+id/editTextAltaCorreoProtectora"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correoPlaceholder"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaCorreoProtectora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAltaCorreoProtectora"
        app:layout_constraintVertical_bias="0.692" />
</androidx.constraintlayout.widget.ConstraintLayout>