<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/orange_light"
    android:orientation="vertical"
    app:layout_anchorGravity="top">

    <TextView
        android:id="@+id/textViewNombreVeterinario"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/veterinario"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewTelefonoVeterinario"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/telefono" />

    <TextView
        android:id="@+id/textViewEspecialidadVeterinario"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/especialidad" />

</LinearLayout>